# crawl_vbpl

./: answer.py  check_valid_url.py  convert_url_format.py  crawl_content.py  crawl_laws_content.py  crawl_minister.py  crawl_url.py  read_file.py  setup_hadoop.txt  test.py  test_read_json_docling.py  tvpl_crawler.py  url_bokhoahoccongnghe_old.json
all_url/: url_bocongan.json  url_bocongthuong.json  url_bogiaoducdaotao.json  url_bogiaothong.json  url_bokehoachvadautu.json  url_bokhoahoccongnghe.json  url_bolaodong.json  url_bongoaigiao.json  url_bonoivu.json  url_bonongnghiep.json  url_boquocphong.json  url_botaichinh.json  url_botainguyen.json  url_bothongtin.json  url_botuphap.json  url_bovanhoathethao.json  url_boxaydung.json  url_boyte.json  url_kiemtoannhanuoc.json  url_nganhangnhanuoc.json  url_thanhtrachinhphu.json  url_toaannhandantoicao.json  url_uybandantoc.json  url_vanphongchinhphu.json  url_vienkiemsatnhandantoicao.json
crawl_vbpl_sub/: PLAN.md  README.md  pyproject.toml  vbpl_single_file_json.py
crawl_vbpl_sub/src/crawler/: attachments.py  config.py  detail.py  discovery.py  main.py  parser.py  state.py  writer.py
out_vbpl_179271/: vbpl_179271.json
tvpl_output/: checkpoint.json  errors.jsonl
